# genlogs-backend

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
api/: main.py
api/constants/: error_constants.py
api/controllers/: carrier_controller.py  root_controller.py
api/core/: config.py
api/repositories/: carrier_repository.py
api/schemas/: carrier_schemas.py  error_schemas.py
api/utils/: city_utils.py  update_version.py
tests/repositories/: carrier_repository_test.py
