[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Camilo J Sepulveda <csepulvedaz@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.96.0"
uvicorn = "0.22.0"
pytest = "^8.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.272"
tomlkit = "^0.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100